--- a/html/projeto final.html
+++ b/html/projeto final.html
@@ -5,31 +5,68 @@
 		<title>Centro Cultural Oca Dos Curumins</title>
 	</head>
 	<body>
-		<header>
-			<figure>
-				<img src="">
+		<header class="conteiner-menu">
+			<figure class="conteiner-foto">
+				<img class= "logo-principal" src="">
 			</figure>
-			<nav>
-				<ul>
-					<li>sobre</li>
-					<li>atividades</li>
-					<li>impacto</li>
-					<li>parceiros</li>
-					<li>contato</li>
+			<nav class="conteiner-navegação">
+				<ul class="lista-menu">
+					<li class="item-menu">sobre</li>
+					<li class="item-menu">atividades</li>
+					<li class="item-menu">impacto</li>
+					<li class="item-menu">parceiros</li>
+					<li class="item-menu">contato</li>
 				</ul>
 			</nav>
 		</header>
 		<main>
-			<section>
-				<p>O <strong>Centro Cultural Oca dos Curumins</strong>,teve suas atividades iniciadas em abril do ano de 1977,focadas em educação.Hoje em dia trabalhamos com educação,cultura,esporte,artesanato e atendimento às famílias em busca de auxílio seja na área jurídica ou não.</p>
+			<section class="caixa-um">
+				<p class="texto-um">O <strong>Centro Cultural Oca dos Curumins</strong>,teve suas atividades iniciadas em abril do ano de 1977,focadas em educação.Hoje em dia trabalhamos com educação,cultura,esporte,artesanato e atendimento às famílias em busca de auxílio seja na área jurídica ou não.</p>
+				<img class="imagem-um" src="">
+				<img class="imagem-dois" src="">
+				<img class="imagem-tres" src="">
 			</section>
-			<section></section>
-			<section></section>
-			<section></section>
-			<section></section>
+			<section class="caixa-dois">
+				<h1 class="titulo-um">Atividades</h1>
+				<ul class="menu-dois">
+					<li class="item-menu-um">Alfabetização</li>
+					<li class="item-menu-dois">Reforço Escolar</li>
+					<li class="item-menu-tres">Aulas de inglês</li>
+					<li class="item-menu-quatro">Palestras</li>
+					<li class="item-menu-cinco">Artesanato</li>
+					<li class="item-menu-seis">Teatro</li>
+					<li class="item-menu-sete">Dança</li>
+					<li class="item-menu-oito">Capoeira</li>
+				</ul>
+			</section>
+			<section class="caixa-tres">
+				<h2 class="titulo-dois">impacto</h2>
+				<p class="texto-dois">Com uma equipe composta apenas por voluntários conseguimos atender uma média de 60 pessoas em nossas atividades.Esse impacto pode ser ainda maior com a sua colaborãção!</p>
+				<figure class="conteiner-foto-dois">
+					<img class="foto-impacto"src="">
+				</figure>
+			</section>
+			<section class="caixa-quatro">
+				<h2 class="titulo-tres">Parceiros</h2>
+				<img class="imagem-quatro" src="">
+				<img class="imagem-cinco" src="">
+				<img class="imagem-seis" src="">
+				<img class="imagem-sete" src="">
+				<img class="imagem-oito" src="">
+				<img class="imagem-nove" src="">
+				<p class="texto-icone">Assossiação de Moradores do Morro do Itararé</p>
+				<p class="texto-icone-dois">Hashi Dourado</p>
+			</section>
+			<section class="caixa-cinco">
+				<h2 class="titulo-quatro">Contato</h2>
+				<p class="texto-tres">(21)98854-1893 - (21)3071-6750</p>
+				<p class="texto-quatro">tiabete2008@gmail.com betes_aparecida@hotmail.com ccocococadoscurumins@hotmail.com</p>
+				<p class="texto-cinco">Estrada do Itararé, 480 fundos Travessa São José, 13 Avenida Itaóca, 2353 fundo B(anexo)</p>
+			</section>
 		</main>
-		<footer>
-			
+		<footer class="caixa-final">
+			<p class="texto-final">Desenvolvido por</p>
+			<img class="logo-vnw" src="">
 		</footer>
 	</body>
 </html>
