arquivo css adicionado

--- a/html/projeto final.html
+++ b/html/projeto final.html
@@ -3,6 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Centro Cultural Oca Dos Curumins</title>
+		<link rel="stylesheet" type="text/css" href="./projeto final.css">
+		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	</head>
 	<body>
 		<header class="conteiner-menu">
@@ -21,7 +23,7 @@
 		</header>
 		<main>
 			<section class="caixa-um">
-				<p class="texto-um">O <strong>Centro Cultural Oca dos Curumins</strong>,teve suas atividades iniciadas em abril do ano de 1977,focadas em educação.Hoje em dia trabalhamos com educação,cultura,esporte,artesanato e atendimento às famílias em busca de auxílio seja na área jurídica ou não.</p>
+				<p class="texto-um">O Centro Cultural Oca dos Curumins, teve suas atividades iniciadas em abril do ano de 1977,focadas em educação.Hoje em dia trabalhamos com educação,cultura,esporte,artesanato e atendimento às famílias em busca de auxílio seja na área jurídica ou não.</p>
 				<img class="imagem-um" src="">
 				<img class="imagem-dois" src="">
 				<img class="imagem-tres" src="">
