--- a/projeto final.html
+++ b/projeto final.html
@@ -4,11 +4,14 @@
 		<meta charset="utf-8">
 		<title>Centro Cultural Oca Dos Curumins</title>
 		<link rel="stylesheet" type="text/css" href="./projeto final.css">
-		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Roboto:900" rel="stylesheet">
 	</head>
 	<body>
 		<header class="conteiner-menu">
-			<figure class="conteiner-foto">
+		</header>
+		<main>
+			<section class="caixa-um">
+				<figure class="conteiner-foto">
 				<img class= "logo-principal" src="">
 			</figure>
 			<nav class="conteiner-navegação">
@@ -20,16 +23,13 @@
 					<li class="item-menu">contato</li>
 				</ul>
 			</nav>
-		</header>
-		<main>
-			<section class="caixa-um">
-				<p class="texto-um">O Centro Cultural Oca dos Curumins, teve suas atividades iniciadas em abril do ano de 1977,focadas em educação.Hoje em dia trabalhamos com educação,cultura,esporte,artesanato e atendimento às famílias em busca de auxílio seja na área jurídica ou não.</p>
+				<p class="texto-um">O Centro Cultural Oca dos Curumins, teve suas atividades iniciadas em abril do ano de 1977,focadas em educação.Hoje em dia trabalhamos com educação, cultura, esporte, artesanato e atendimento às famílias em busca de auxílio seja na área jurídica ou não.</p>
 				<img class="imagem-um" src="">
 				<img class="imagem-dois" src="">
 				<img class="imagem-tres" src="">
 			</section>
 			<section class="caixa-dois">
-				<h1 class="titulo-um">Atividades</h1>
+				<h1 class="titulo-um">ATIVIDADES</h1>
 				<ul class="menu-dois">
 					<li class="item-menu-um">Alfabetização</li>
 					<li class="item-menu-dois">Reforço Escolar</li>
@@ -42,14 +42,14 @@
 				</ul>
 			</section>
 			<section class="caixa-tres">
-				<h2 class="titulo-dois">impacto</h2>
-				<p class="texto-dois">Com uma equipe composta apenas por voluntários conseguimos atender uma média de 60 pessoas em nossas atividades.Esse impacto pode ser ainda maior com a sua colaborãção!</p>
+				<h2 class="titulo-dois">IMPACTO</h2>
+				<p class="texto-dois">Com uma equipe composta apenas por voluntários conseguimos atender uma média de 60 pessoas em nossas atividades.Esse impacto pode ser ainda maior com a sua colaboração.!</p>
 				<figure class="conteiner-foto-dois">
 					<img class="foto-impacto"src="">
 				</figure>
 			</section>
 			<section class="caixa-quatro">
-				<h2 class="titulo-tres">Parceiros</h2>
+				<h2 class="titulo-tres">PARCEIROS</h2>
 				<img class="imagem-quatro" src="">
 				<img class="imagem-cinco" src="">
 				<img class="imagem-seis" src="">
@@ -60,7 +60,7 @@
 				<p class="texto-icone-dois">Hashi Dourado</p>
 			</section>
 			<section class="caixa-cinco">
-				<h2 class="titulo-quatro">Contato</h2>
+				<h2 class="titulo-quatro">CONTATO</h2>
 				<p class="texto-tres">(21)98854-1893 - (21)3071-6750</p>
 				<p class="texto-quatro">tiabete2008@gmail.com betes_aparecida@hotmail.com ccocococadoscurumins@hotmail.com</p>
 				<p class="texto-cinco">Estrada do Itararé, 480 fundos Travessa São José, 13 Avenida Itaóca, 2353 fundo B(anexo)</p>
