mais modificações html e css

--- a/projeto final.html
+++ b/projeto final.html
@@ -60,6 +60,9 @@
 				<p class="texto-icone-dois">Hashi Dourado</p>
 			</section>
 			<section class="caixa-cinco">
+				<figure class="conteiner-foto-tres">
+					<img class="foto-contato" src="">
+				</figure>
 				<h2 class="titulo-quatro">CONTATO</h2>
 				<p class="texto-tres">(21)98854-1893 - (21)3071-6750</p>
 				<p class="texto-quatro">tiabete2008@gmail.com betes_aparecida@hotmail.com ccocococadoscurumins@hotmail.com</p>
