atualizações feitas na caixa-cinco

--- a/projeto final.html
+++ b/projeto final.html
@@ -64,9 +64,10 @@
 					<img class="foto-contato" src="">
 				</figure>
 				<h2 class="titulo-quatro">CONTATO</h2>
-				<p class="texto-tres">(21)98854-1893 - (21)3071-6750</p>
+				<p class="texto-tres">(21)98854-1893 (21)3071-6750</p>
 				<p class="texto-quatro">tiabete2008@gmail.com betes_aparecida@hotmail.com ccocococadoscurumins@hotmail.com</p>
-				<p class="texto-cinco">Estrada do Itararé, 480 fundos Travessa São José, 13 Avenida Itaóca, 2353 fundo B(anexo)</p>
+				<p class="texto-cinco">Estrada do Itararé, 480 fundos Travessa São José, 13</p>
+				<p class="texto-seis">Avenida Itaóca, 2353 fundo B(anexo)</p>
 			</section>
 		</main>
 		<footer class="caixa-final">
