modificados os nomes das classes

--- a/projeto final.html
+++ b/projeto final.html
@@ -5,12 +5,13 @@
 		<title>Centro Cultural Oca Dos Curumins</title>
 		<link rel="stylesheet" type="text/css" href="./projeto final.css">
 		<link href="https://fonts.googleapis.com/css?family=Roboto:900" rel="stylesheet">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body>
 		<header class="conteiner-menu">
 		</header>
 		<main>
-			<section class="caixa-um">
+			<section class="box-inicio">
 				<figure class="conteiner-foto">
 				<img class= "logo-principal" src="">
 			</figure>
@@ -23,55 +24,55 @@
 					<li class="item-menu">contato</li>
 				</ul>
 			</nav>
-				<p class="texto-um">O Centro Cultural Oca dos Curumins, teve suas atividades iniciadas em abril do ano de 1977,focadas em educação.Hoje em dia trabalhamos com educação, cultura, esporte, artesanato e atendimento às famílias em busca de auxílio seja na área jurídica ou não.</p>
-				<img class="imagem-um" src="">
-				<img class="imagem-dois" src="">
-				<img class="imagem-tres" src="">
+				<p class="texto-apresentação">O Centro Cultural Oca dos Curumins, teve suas atividades iniciadas em abril do ano de 1977,focadas em educação.Hoje em dia trabalhamos com educação, cultura, esporte, artesanato e atendimento às famílias em busca de auxílio seja na área jurídica ou não.</p>
+				<img class="foto-apresentação" src="">
+				<img class="foto-meio" src="">
+				<img class="foto-final" src="">
 			</section>
-			<section class="caixa-dois">
-				<h1 class="titulo-um">ATIVIDADES</h1>
-				<ul class="menu-dois">
-					<li class="item-menu-um">Alfabetização</li>
-					<li class="item-menu-dois">Reforço Escolar</li>
-					<li class="item-menu-tres">Aulas de inglês</li>
-					<li class="item-menu-quatro">Palestras</li>
-					<li class="item-menu-cinco">Artesanato</li>
-					<li class="item-menu-seis">Teatro</li>
-					<li class="item-menu-sete">Dança</li>
-					<li class="item-menu-oito">Capoeira</li>
+			<section class="conteiner-icones">
+				<h1 class="title-important">ATIVIDADES</h1>
+				<ul class="menu-social">
+					<li class="item-alfabetização">Alfabetização</li>
+					<li class="item-reforço">Reforço Escolar</li>
+					<li class="item-aulas">Aulas de inglês</li>
+					<li class="item-palestras">Palestras</li>
+					<li class="item-artesanato">Artesanato</li>
+					<li class="item-teatro">Teatro</li>
+					<li class="item-dança">Dança</li>
+					<li class="item-capoeira">Capoeira</li>
 				</ul>
 			</section>
-			<section class="caixa-tres">
-				<h2 class="titulo-dois">IMPACTO</h2>
-				<p class="texto-dois">Com uma equipe composta apenas por voluntários conseguimos atender uma média de 60 pessoas em nossas atividades.Esse impacto pode ser ainda maior com a sua colaboração.!</p>
-				<figure class="conteiner-foto-dois">
+			<section class="box-impacto">
+				<h2 class="title-inpact">IMPACTO</h2>
+				<p class="paragrafo-depoimento">Com uma equipe composta apenas por voluntários conseguimos atender uma média de 60 pessoas em nossas atividades.Esse impacto pode ser ainda maior com a sua colaboração.!</p>
+				<figure class="conteiner-image">
 					<img class="foto-impacto"src="">
 				</figure>
 			</section>
-			<section class="caixa-quatro">
-				<h2 class="titulo-tres">PARCEIROS</h2>
-				<img class="imagem-quatro" src="">
-				<img class="imagem-cinco" src="">
-				<img class="imagem-seis" src="">
-				<img class="imagem-sete" src="">
-				<img class="imagem-oito" src="">
-				<img class="imagem-nove" src="">
-				<p class="texto-icone">Assossiação de Moradores do Morro do Itararé</p>
-				<p class="texto-icone-dois">Hashi Dourado</p>
+			<section class="box-parceria">
+				<h2 class="title-friends">PARCEIROS</h2>
+				<img class="image-sesc" src="">
+				<img class="image-quintal" src="">
+				<img class="image-radio" src="">
+				<img class="image-samba" src="">
+				<img class="image-assossiação" src="">
+				<img class="image-hashi" src="">
+				<p class="text-assossiação">Assossiação de Moradores do Morro do Itararé</p>
+				<p class="text-hashi">Hashi Dourado</p>
 			</section>
-			<section class="caixa-cinco">
-				<figure class="conteiner-foto-tres">
-					<img class="foto-contato" src="">
+			<section class="box-contact">
+				<figure class="conteiner-photography">
+					<img class="photography" src="">
 				</figure>
-				<h2 class="titulo-quatro">CONTATO</h2>
-				<p class="texto-tres">(21)98854-1893 (21)3071-6750</p>
-				<p class="texto-quatro">tiabete2008@gmail.com betes_aparecida@hotmail.com ccocococadoscurumins@hotmail.com</p>
-				<p class="texto-cinco">Estrada do Itararé, 480 fundos Travessa São José, 13</p>
-				<p class="texto-seis">Avenida Itaóca, 2353 fundo B(anexo)</p>
+				<h2 class="title-contact">CONTATO</h2>
+				<p class="text-phones">(21)98854-1893 (21)3071-6750</p>
+				<p class="text-email">tiabete2008@gmail.com betes_aparecida@hotmail.com ccocococadoscurumins@hotmail.com</p>
+				<p class="text-address">Estrada do Itararé, 480 fundos Travessa São José, 13</p>
+				<p class="text-avenue">Avenida Itaóca, 2353 fundo B(anexo)</p>
 			</section>
 		</main>
-		<footer class="caixa-final">
-			<p class="texto-final">Desenvolvido por</p>
+		<footer class="conteiner-final">
+			<p class="final-text">Desenvolvido por</p>
 			<img class="logo-vnw" src="">
 		</footer>
 	</body>
