fotos adicionadas para teste

--- a/projeto final.html
+++ b/projeto final.html
@@ -13,7 +13,7 @@
 		<main>
 			<section class="box-inicio">
 				<figure class="conteiner-foto">
-				<img class= "logo-principal" src="">
+				<img class= "logo-principal" src="./indio logo.jpg">
 			</figure>
 			<nav class="conteiner-navegação">
 				<ul class="lista-menu">
@@ -25,9 +25,9 @@
 				</ul>
 			</nav>
 				<p class="texto-apresentação">O Centro Cultural Oca dos Curumins, teve suas atividades iniciadas em abril do ano de 1977,focadas em educação.Hoje em dia trabalhamos com educação, cultura, esporte, artesanato e atendimento às famílias em busca de auxílio seja na área jurídica ou não.</p>
-				<img class="foto-apresentação" src="">
-				<img class="foto-meio" src="">
-				<img class="foto-final" src="">
+				<img class="foto-apresentação" src="./foto cianças1.jpg">
+				<img class="foto-meio" src="./foto crianças2.jpg">
+				<img class="foto-final" src="./foto crianças3.jpg">
 			</section>
 			<section class="conteiner-icones">
 				<h1 class="title-important">ATIVIDADES</h1>
