pequenas midificações feitas

--- a/projeto final.html
+++ b/projeto final.html
@@ -25,7 +25,7 @@
 				</ul>
 			</nav>
 				<p class="texto-apresentação">O Centro Cultural Oca dos Curumins, teve suas atividades iniciadas em abril do ano de 1977,focadas em educação.Hoje em dia trabalhamos com educação, cultura, esporte, artesanato e atendimento às famílias em busca de auxílio seja na área jurídica ou não.</p>
-				<img class="foto-apresentação" src="./foto cianças1.jpg">
+				<img class="foto-apresentação" src="./foto crianças1.jpg">
 				<img class="foto-meio" src="./foto crianças2.jpg">
 				<img class="foto-final" src="./foto crianças3.jpg">
 			</section>
