muitas midificações feitas

--- a/projeto final.html
+++ b/projeto final.html
@@ -13,7 +13,7 @@
 		<main>
 			<section class="box-inicio">
 				<figure class="conteiner-foto">
-				<img class= "logo-principal" src="./indio logo.jpg">
+				<img class= "logo-principal" src="./assets/logo.png">
 			</figure>
 			<nav class="conteiner-navegação">
 				<ul class="lista-menu">
@@ -25,38 +25,40 @@
 				</ul>
 			</nav>
 				<p class="texto-apresentação">O Centro Cultural Oca dos Curumins, teve suas atividades iniciadas em abril do ano de 1977,focadas em educação.Hoje em dia trabalhamos com educação, cultura, esporte, artesanato e atendimento às famílias em busca de auxílio seja na área jurídica ou não.</p>
-				<img class="foto-apresentação" src="./foto crianças1.jpg">
-				<img class="foto-meio" src="./foto crianças2.jpg">
-				<img class="foto-final" src="./foto crianças3.jpg">
+				<img class="foto-apresentação" src="./assets/img1.png">
+				<img class="foto-meio" src="./assets/img2.png">
+				<img class="foto-final" src="./assets/img3.png">
 			</section>
 			<section class="conteiner-icones">
 				<h1 class="title-important">ATIVIDADES</h1>
 				<ul class="menu-social">
-					<li class="item-alfabetização">Alfabetização</li>
-					<li class="item-reforço">Reforço Escolar</li>
-					<li class="item-aulas">Aulas de inglês</li>
-					<li class="item-palestras">Palestras</li>
-					<li class="item-artesanato">Artesanato</li>
-					<li class="item-teatro">Teatro</li>
-					<li class="item-dança">Dança</li>
-					<li class="item-capoeira">Capoeira</li>
+					<li class="item-alfabetização"><img src="./assets/alfabetização.svg">Alfabetização</li>
+					<li class="item-reforço"><img src="./assets/reforço.svg">Reforço Escolar</li>
+					<li class="item-aulas"><img src="./assets/ingles.svg">Aulas de inglês</li>
+					<li class="item-palestras"><img src="./assets/palestras.svg">Palestras</li>
+					<li class="item-artesanato"><img src="./assets/artesanato.svg">Artesanato</li>
+					<li class="item-teatro"><img src="./assets/teatro.svg">Teatro</li>
+					<li class="item-dança"><img src="./assets/dança.svg">Dança</li>
+					<li class="item-capoeira"><img src="./assets/capoeira.svg">Capoeira</li>
 				</ul>
 			</section>
 			<section class="box-impacto">
 				<h2 class="title-inpact">IMPACTO</h2>
 				<p class="paragrafo-depoimento">Com uma equipe composta apenas por voluntários conseguimos atender uma média de 60 pessoas em nossas atividades.Esse impacto pode ser ainda maior com a sua colaboração.!</p>
 				<figure class="conteiner-image">
-					<img class="foto-impacto"src="">
+					<img class="foto-impacto"src="./assets/impacto.png">
 				</figure>
 			</section>
 			<section class="box-parceria">
 				<h2 class="title-friends">PARCEIROS</h2>
-				<img class="image-sesc" src="">
-				<img class="image-quintal" src="">
-				<img class="image-radio" src="">
-				<img class="image-samba" src="">
-				<img class="image-assossiação" src="">
-				<img class="image-hashi" src="">
+				<ul class="menu-parceria">
+					<li><img class="image-sesc" src="./assets/sesc.png"></li>
+					<li><img class="image-quintal" src="./assets/negra.png"></li>
+					<li><img class="image-radio" src="./assets/radio.png"></li>
+					<li><img class="image-samba" src="./assets/samba.png"></li>
+					<li><img class="image-assossiação" src="./assets/itarare.png"></li>
+					<li><img class="image-hashi" src="./assets/hashi.png"></li>
+				</ul>
 				<p class="text-assossiação">Assossiação de Moradores do Morro do Itararé</p>
 				<p class="text-hashi">Hashi Dourado</p>
 			</section>
