todas imagens colocadas no lugar certo

--- a/projeto final.html
+++ b/projeto final.html
@@ -5,7 +5,7 @@
 		<title>Centro Cultural Oca Dos Curumins</title>
 		<link rel="stylesheet" type="text/css" href="./projeto final.css">
 		<link href="https://fonts.googleapis.com/css?family=Roboto:900" rel="stylesheet">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="viewport" content="height=device-height, initial-scale=1.0">
 	</head>
 	<body>
 		<header class="conteiner-menu">
@@ -56,15 +56,13 @@
 					<li><img class="image-quintal" src="./assets/negra.png"></li>
 					<li><img class="image-radio" src="./assets/radio.png"></li>
 					<li><img class="image-samba" src="./assets/samba.png"></li>
-					<li><img class="image-assossiação" src="./assets/itarare.png"></li>
-					<li><img class="image-hashi" src="./assets/hashi.png"></li>
+					<li><img class="image-assossiação" src="./assets/itarare.png"><p class="text-assossiação">Assossiação de Moradores do Morro do Itararé</p></li>
+					<li><img class="image-hashi" src="./assets/hashi.png"><p class="text-hashi">Hashi Dourado</p></li>
 				</ul>
-				<p class="text-assossiação">Assossiação de Moradores do Morro do Itararé</p>
-				<p class="text-hashi">Hashi Dourado</p>
 			</section>
 			<section class="box-contact">
 				<figure class="conteiner-photography">
-					<img class="photography" src="">
+					<img class="photography" src="./assets/img_contato.png">
 				</figure>
 				<h2 class="title-contact">CONTATO</h2>
 				<p class="text-phones">(21)98854-1893 (21)3071-6750</p>
@@ -75,7 +73,9 @@
 		</main>
 		<footer class="conteiner-final">
 			<p class="final-text">Desenvolvido por</p>
-			<img class="logo-vnw" src="">
+			<figure class="logo-final">
+				<img class="logo-vnw" src="./assets/logo_vnw.png">
+			</figure>
 		</footer>
 	</body>
 </html>
