fonts adicionado e mudando a cor dos svg

--- a/projeto final.html
+++ b/projeto final.html
@@ -5,6 +5,7 @@
 		<title>Centro Cultural Oca Dos Curumins</title>
 		<link rel="stylesheet" type="text/css" href="./projeto final.css">
 		<link href="https://fonts.googleapis.com/css?family=Roboto:900" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="./fonts.css">
 		<meta name="viewport" content="height=device-height, initial-scale=1.0">
 	</head>
 	<body>
@@ -44,7 +45,7 @@
 			</section>
 			<section class="box-impacto">
 				<h2 class="title-inpact">IMPACTO</h2>
-				<p class="paragrafo-depoimento">Com uma equipe composta apenas por voluntários conseguimos atender uma média de 60 pessoas em nossas atividades.Esse impacto pode ser ainda maior com a sua colaboração.!</p>
+				<p class="paragrafo-depoimento">Com uma equipe composta apenas por voluntários conseguimos atender uma média de 60 pessoas em nossas atividades. Esse impacto pode ser ainda maior com a sua colaboração.!</p>
 				<figure class="conteiner-image">
 					<img class="foto-impacto"src="./assets/impacto.png">
 				</figure>
