modificado menu inicial

--- a/projeto final.html
+++ b/projeto final.html
@@ -6,25 +6,28 @@
 		<link rel="stylesheet" type="text/css" href="./projeto final.css">
 		<link href="https://fonts.googleapis.com/css?family=Roboto:900" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="./fonts.css">
-		<meta name="viewport" content="height=device-height, initial-scale=1.0">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body>
 		<header class="conteiner-menu">
+			<nav class="conteiner-navegação">
+					<div class="box-menu">
+						<img class="logo-menu" src="./assets/menu_hamburguer.png">
+						<ul class="lista-menu">
+							<li class="item-menu">sobre</li>
+							<li class="item-menu">atividades</li>
+							<li class="item-menu">impacto</li>
+							<li class="item-menu">parceiros</li>
+							<li class="item-menu">contato</li>
+						</ul>
+					</div>
+			</nav>
 		</header>
 		<main>
 			<section class="box-inicio">
 				<figure class="conteiner-foto">
-				<img class= "logo-principal" src="./assets/logo.png">
-			</figure>
-			<nav class="conteiner-navegação">
-				<ul class="lista-menu">
-					<li class="item-menu">sobre</li>
-					<li class="item-menu">atividades</li>
-					<li class="item-menu">impacto</li>
-					<li class="item-menu">parceiros</li>
-					<li class="item-menu">contato</li>
-				</ul>
-			</nav>
+					<img class= "logo-principal" src="./assets/logo.png">
+				</figure>
 				<p class="texto-apresentação">O Centro Cultural Oca dos Curumins, teve suas atividades iniciadas em abril do ano de 1977,focadas em educação.Hoje em dia trabalhamos com educação, cultura, esporte, artesanato e atendimento às famílias em busca de auxílio seja na área jurídica ou não.</p>
 				<img class="foto-apresentação" src="./assets/img1.png">
 				<img class="foto-meio" src="./assets/img2.png">
