media queries para resolução 768px adicionadas

--- a/projeto final.html
+++ b/projeto final.html
@@ -47,7 +47,7 @@
 				</ul>
 			</section>
 			<section class="box-impacto">
-				<h2 class="title-inpact">IMPACTO</h2>
+				<h2 class="title-impact">IMPACTO</h2>
 				<p class="paragrafo-depoimento">Com uma equipe composta apenas por voluntários conseguimos atender uma média de 60 pessoas em nossas atividades. Esse impacto pode ser ainda maior com a sua colaboração.!</p>
 				<figure class="conteiner-image">
 					<img class="foto-impacto"src="./assets/impacto.png">
