mais modificações feitas em media querie 768px

--- a/projeto final.html
+++ b/projeto final.html
@@ -60,8 +60,8 @@
 					<li><img class="image-quintal" src="./assets/negra.png"></li>
 					<li><img class="image-radio" src="./assets/radio.png"></li>
 					<li><img class="image-samba" src="./assets/samba.png"></li>
-					<li><img class="image-assossiação" src="./assets/itarare.png"><p class="text-assossiação">Assossiação de Moradores do Morro do Itararé</p></li>
-					<li><img class="image-hashi" src="./assets/hashi.png"><p class="text-hashi">Hashi Dourado</p></li>
+					<li class="icone-assossiação"><img class="image-assossiação" src="./assets/itarare.png"><p class="text-assossiação">Assossiação de Moradores do Morro do Itararé</p></li>
+					<li class="icone-hashi"><img class="image-hashi" src="./assets/hashi.png"><p class="text-hashi">Hashi Dourado</p></li>
 				</ul>
 			</section>
 			<section class="box-contact">
