adicionado mais modificações

--- a/projeto final.html
+++ b/projeto final.html
@@ -28,10 +28,12 @@
 				<figure class="conteiner-foto">
 					<img class= "logo-principal" src="./assets/logo.png">
 				</figure>
-				<p class="texto-apresentação">O Centro Cultural Oca dos Curumins, teve suas atividades iniciadas em abril do ano de 1977,focadas em educação.Hoje em dia trabalhamos com educação, cultura, esporte, artesanato e atendimento às famílias em busca de auxílio seja na área jurídica ou não.</p>
-				<img class="foto-apresentação" src="./assets/img1.png">
-				<img class="foto-meio" src="./assets/img2.png">
-				<img class="foto-final" src="./assets/img3.png">
+				<article class="box-conteudo">
+					<p class="texto-apresentação">O Centro Cultural Oca dos Curumins, teve suas atividades iniciadas em abril do ano de 1977,focadas em educação.Hoje em dia trabalhamos com educação, cultura, esporte, artesanato e atendimento às famílias em busca de auxílio seja na área jurídica ou não.</p>
+					<img class="foto-apresentação" src="./assets/img1.png">
+					<img class="foto-meio" src="./assets/img2.png">
+					<img class="foto-final" src="./assets/img3.png">
+				</article>
 			</section>
 			<section class="conteiner-icones">
 				<h1 class="title-important">ATIVIDADES</h1>
