novas modificações no media 1024px

--- a/projeto final.html
+++ b/projeto final.html
@@ -25,15 +25,17 @@
 		</header>
 		<main>
 			<section class="box-inicio">
-				<figure class="conteiner-foto">
+				<div class="box-conteudo">
+					<figure class="conteiner-foto">
 					<img class= "logo-principal" src="./assets/logo.png">
 				</figure>
-				<article class="box-conteudo">
-					<p class="texto-apresentação">O Centro Cultural Oca dos Curumins, teve suas atividades iniciadas em abril do ano de 1977,focadas em educação.Hoje em dia trabalhamos com educação, cultura, esporte, artesanato e atendimento às famílias em busca de auxílio seja na área jurídica ou não.</p>
+				<p class="texto-apresentação">O Centro Cultural Oca dos Curumins, teve suas atividades iniciadas em abril do ano de 1977,focadas em educação.Hoje em dia trabalhamos com educação, cultura, esporte, artesanato e atendimento às famílias em busca de auxílio seja na área jurídica ou não.</p>
+				</div>
+				<div class="box-images">
 					<img class="foto-apresentação" src="./assets/img1.png">
 					<img class="foto-meio" src="./assets/img2.png">
 					<img class="foto-final" src="./assets/img3.png">
-				</article>
+				</div>
 			</section>
 			<section class="conteiner-icones">
 				<h1 class="title-important">ATIVIDADES</h1>
