modificado sessão impacto

--- a/projeto final.html
+++ b/projeto final.html
@@ -40,19 +40,21 @@
 			<section class="conteiner-icones">
 				<h1 class="title-important">ATIVIDADES</h1>
 				<ul class="menu-social">
-					<li class="item-alfabetização"><img src="./assets/alfabetização.svg">Alfabetização</li>
-					<li class="item-reforço"><img src="./assets/reforço.svg">Reforço Escolar</li>
-					<li class="item-aulas"><img src="./assets/ingles.svg">Aulas de inglês</li>
-					<li class="item-palestras"><img src="./assets/palestras.svg">Palestras</li>
-					<li class="item-artesanato"><img src="./assets/artesanato.svg">Artesanato</li>
-					<li class="item-teatro"><img src="./assets/teatro.svg">Teatro</li>
-					<li class="item-dança"><img src="./assets/dança.svg">Dança</li>
-					<li class="item-capoeira"><img src="./assets/capoeira.svg">Capoeira</li>
+					<li class="item-alfabetização"><img class="icone" src="./assets/alfabetização.svg">Alfabetização</li>
+					<li class="item-reforço"><img class="icone" src="./assets/reforço.svg">Reforço Escolar</li>
+					<li class="item-aulas"><img class="icone" src="./assets/ingles.svg">Aulas de inglês</li>
+					<li class="item-palestras"><img class="icone" src="./assets/palestras.svg">Palestras</li>
+					<li class="item-artesanato"><img class="icone" src="./assets/artesanato.svg">Artesanato</li>
+					<li class="item-teatro"><img class="icone" src="./assets/teatro.svg">Teatro</li>
+					<li class="item-dança"><img class="icone" src="./assets/dança.svg">Dança</li>
+					<li class="item-capoeira"><img class="icone" src="./assets/capoeira.svg">Capoeira</li>
 				</ul>
 			</section>
 			<section class="box-impacto">
-				<h2 class="title-impact">IMPACTO</h2>
-				<p class="paragrafo-depoimento">Com uma equipe composta apenas por voluntários conseguimos atender uma média de 60 pessoas em nossas atividades. Esse impacto pode ser ainda maior com a sua colaboração.!</p>
+				<div class="box-paragrafo">
+					<h2 class="title-impact">IMPACTO</h2>
+					<p class="paragrafo-depoimento">Com uma equipe composta apenas por voluntários conseguimos atender uma média de 60 pessoas em nossas atividades. Esse impacto pode ser ainda maior com a sua colaboração.!</p>
+				</div>
 				<figure class="conteiner-image">
 					<img class="foto-impacto"src="./assets/impacto.png">
 				</figure>
@@ -60,10 +62,10 @@
 			<section class="box-parceria">
 				<h2 class="title-friends">PARCEIROS</h2>
 				<ul class="menu-parceria">
-					<li><img class="image-sesc" src="./assets/sesc.png"></li>
-					<li><img class="image-quintal" src="./assets/negra.png"></li>
-					<li><img class="image-radio" src="./assets/radio.png"></li>
-					<li><img class="image-samba" src="./assets/samba.png"></li>
+					<li class="icone-sesc"><img class="image-sesc" src="./assets/sesc.png"></li>
+					<li class="icone-quintal"><img class="image-quintal" src="./assets/negra.png"></li>
+					<li class="icone-radio"><img class="image-radio" src="./assets/radio.png"></li>
+					<li class="icone-samba"><img class="image-samba" src="./assets/samba.png"></li>
 					<li class="icone-assossiação"><img class="image-assossiação" src="./assets/itarare.png"><p class="text-assossiação">Assossiação de Moradores do Morro do Itararé</p></li>
 					<li class="icone-hashi"><img class="image-hashi" src="./assets/hashi.png"><p class="text-hashi">Hashi Dourado</p></li>
 				</ul>
