modificações feitas nos arquivos html e css

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Centro Cultural Oca Dos Curumins</title>
-		<link rel="stylesheet" type="text/css" href="./projeto final.css">
+		<link rel="stylesheet" type="text/css" href="./style.css">
 		<link href="https://fonts.googleapis.com/css?family=Roboto:900" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="./fonts.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -27,9 +27,9 @@
 			<section class="box-inicio">
 				<div class="box-conteudo">
 					<figure class="conteiner-foto">
-					<img class= "logo-principal" src="./assets/logo.png">
-				</figure>
-				<p class="texto-apresentação">O Centro Cultural Oca dos Curumins, teve suas atividades iniciadas em abril do ano de 1977,focadas em educação.Hoje em dia trabalhamos com educação, cultura, esporte, artesanato e atendimento às famílias em busca de auxílio seja na área jurídica ou não.</p>
+						<img class= "logo-principal" src="./assets/logo.png">
+					</figure>
+					<p class="texto-apresentação">O Centro Cultural Oca dos Curumins, teve suas atividades iniciadas em abril do ano de 1977,focadas em educação.Hoje em dia trabalhamos com educação, cultura, esporte, artesanato e atendimento às famílias em busca de auxílio seja na área jurídica ou não.</p>
 				</div>
 				<div class="box-images">
 					<img class="foto-apresentação" src="./assets/img1.png">
@@ -74,11 +74,13 @@
 				<figure class="conteiner-photography">
 					<img class="photography" src="./assets/img_contato.png">
 				</figure>
-				<h2 class="title-contact">CONTATO</h2>
-				<p class="text-phones">(21)98854-1893 (21)3071-6750</p>
-				<p class="text-email">tiabete2008@gmail.com betes_aparecida@hotmail.com ccocococadoscurumins@hotmail.com</p>
-				<p class="text-address">Estrada do Itararé, 480 fundos Travessa São José, 13</p>
-				<p class="text-avenue">Avenida Itaóca, 2353 fundo B(anexo)</p>
+				<div class="conteiner-contato">
+					<h2 class="title-contact">CONTATO</h2>
+					<p class="text-phones">(21)98854-1893 (21)3071-6750</p>
+					<p class="text-email">tiabete2008@gmail.com betes_aparecida@hotmail.com ccocococadoscurumins@hotmail.com</p>
+					<p class="text-address">Estrada do Itararé, 480 fundos Travessa São José, 13</p>
+					<p class="text-avenue">Avenida Itaóca, 2353 fundo B(anexo)</p>
+				</div>
 			</section>
 		</main>
 		<footer class="conteiner-final">
