pasta do projeto organizada,varios problemas resolvidos

--- a/index.html
+++ b/index.html
@@ -3,16 +3,15 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Centro Cultural Oca Dos Curumins</title>
-		<link rel="stylesheet" type="text/css" href="./style.css">
-		<link href="https://fonts.googleapis.com/css?family=Roboto:900" rel="stylesheet">
-		<link rel="stylesheet" type="text/css" href="./fonts.css">
+		<link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+		<link rel="stylesheet" type="text/css" href="./assets/css/fonts.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body>
 		<header class="conteiner-menu">
 			<nav class="conteiner-navegação">
 				<div class="box-menu">
-					<img class="logo-menu" src="./assets/menu_hamburguer.png">
+					<img class="logo-menu" src="./assets/img/menu_hamburguer.png">
 					<ul class="lista-menu">
 						<li class="item-menu">sobre</li>
 						<li class="item-menu">atividades</li>
@@ -27,27 +26,27 @@
 			<section class="box-inicio">
 				<div class="box-conteudo">
 					<figure class="conteiner-foto">
-						<img class= "logo-principal" src="./assets/logo.png">
+						<img class= "logo-principal" src="./assets/img/logo.png">
 					</figure>
 					<p class="texto-apresentação">O Centro Cultural Oca dos Curumins, teve suas atividades iniciadas em abril do ano de 1977,focadas em educação.Hoje em dia trabalhamos com educação, cultura, esporte, artesanato e atendimento às famílias em busca de auxílio seja na área jurídica ou não.</p>
 				</div>
 				<div class="box-images">
-					<img class="foto-apresentação" src="./assets/img1.png">
-					<img class="foto-meio" src="./assets/img2.png">
-					<img class="foto-final" src="./assets/img3.png">
+					<img class="foto-apresentação" src="./assets/img/img1.png">
+					<img class="foto-meio" src="./assets/img/img2.png">
+					<img class="foto-final" src="./assets/img/img3.png">
 				</div>
 			</section>
 			<section class="conteiner-icones">
 				<h1 class="title-important">ATIVIDADES</h1>
 				<ul class="menu-social">
-					<li class="item-alfabetização"><img class="icone" src="./assets/alfabetização.svg">Alfabetização</li>
-					<li class="item-reforço"><img class="icone" src="./assets/reforço.svg">Reforço Escolar</li>
-					<li class="item-aulas"><img class="icone" src="./assets/ingles.svg">Aulas de inglês</li>
-					<li class="item-palestras"><img class="icone" src="./assets/palestras.svg">Palestras</li>
-					<li class="item-artesanato"><img class="icone" src="./assets/artesanato.svg">Artesanato</li>
-					<li class="item-teatro"><img class="icone" src="./assets/teatro.svg">Teatro</li>
-					<li class="item-dança"><img class="icone" src="./assets/dança.svg">Dança</li>
-					<li class="item-capoeira"><img class="icone" src="./assets/capoeira.svg">Capoeira</li>
+					<li class="item-alfabetização"><img class="icone" src="./assets/img/alfabetização.svg">Alfabetização</li>
+					<li class="item-reforço"><img class="icone" src="./assets/img/reforço.svg">Reforço Escolar</li>
+					<li class="item-aulas"><img class="icone" src="./assets/img/ingles.svg">Aulas de inglês</li>
+					<li class="item-palestras"><img class="icone" src="./assets/img/palestras.svg">Palestras</li>
+					<li class="item-artesanato"><img class="icone" src="./assets/img/artesanato.svg">Artesanato</li>
+					<li class="item-teatro"><img class="icone" src="./assets/img/teatro.svg">Teatro</li>
+					<li class="item-dança"><img class="icone" src="./assets/img/dança.svg">Dança</li>
+					<li class="item-capoeira"><img class="icone" src="./assets/img/capoeira.svg">Capoeira</li>
 				</ul>
 			</section>
 			<section class="box-impacto">
@@ -56,23 +55,23 @@
 					<p class="paragrafo-depoimento">Com uma equipe composta apenas por voluntários conseguimos atender uma média de 60 pessoas em nossas atividades. Esse impacto pode ser ainda maior com a sua colaboração.!</p>
 				</div>
 				<figure class="conteiner-image">
-					<img class="foto-impacto"src="./assets/impacto.png">
+					<img class="foto-impacto"src="./assets/img/impacto.png">
 				</figure>
 			</section>
 			<section class="box-parceria">
 				<h2 class="title-friends">PARCEIROS</h2>
 				<ul class="menu-parceria">
-					<li class="icone-sesc"><img class="image-sesc" src="./assets/sesc.png"></li>
-					<li class="icone-quintal"><img class="image-quintal" src="./assets/negra.png"></li>
-					<li class="icone-radio"><img class="image-radio" src="./assets/radio.png"></li>
-					<li class="icone-samba"><img class="image-samba" src="./assets/samba.png"></li>
-					<li class="icone-assossiação"><img class="image-assossiação" src="./assets/itarare.png"><p class="text-assossiação">Assossiação de Moradores do Morro do Itararé</p></li>
-					<li class="icone-hashi"><img class="image-hashi" src="./assets/hashi.png"><p class="text-hashi">Hashi Dourado</p></li>
+					<li class="icone-sesc"><img class="image-sesc" src="./assets/img/sesc.png"></li>
+					<li class="icone-quintal"><img class="image-quintal" src="./assets/img/negra.png"></li>
+					<li class="icone-radio"><img class="image-radio" src="./assets/img/radio.png"></li>
+					<li class="icone-samba"><img class="image-samba" src="./assets/img/samba.png"></li>
+					<li class="icone-assossiação"><img class="image-assossiação" src="./assets/img/itarare.png"><p class="text-assossiação">Assossiação de Moradores do Morro do Itararé</p></li>
+					<li class="icone-hashi"><img class="image-hashi" src="./assets/img/hashi.png"><p class="text-hashi">Hashi Dourado</p></li>
 				</ul>
 			</section>
 			<section class="box-contact">
 				<figure class="conteiner-photography">
-					<img class="photography" src="./assets/img_contato.png">
+					<img class="photography" src="./assets/img/img_contato.png">
 				</figure>
 				<div class="conteiner-contato">
 					<h2 class="title-contact">CONTATO</h2>
@@ -86,7 +85,7 @@
 		<footer class="conteiner-final">
 			<p class="final-text">Desenvolvido por</p>
 			<figure class="logo-final">
-				<img class="logo-vnw" src="./assets/logo_vnw.png">
+				<img class="logo-vnw" src="./assets/img/logo_vnw.png">
 			</figure>
 		</footer>
 	</body>
